# HW_1

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml  linters.yml  tests.yml
phone_lib/: PhoneNumber.c  PhoneNumber.h
scripts/: build.sh  clang-formater.sh  cov-gen.sh  linters.sh
tests_phone_lib/: input.txt  output _example.txt  tests_PhoneNumber.cpp
